# plls_os_ded_local

./: CMakeLists.txt  Makefile  OSDPlib.c  OSDPlib.h  OSDlib.h  OSDlib.h~  log.c  log.h  main.cpp  store_dir  store_dir.py
tests/: test_on_same_email_messages.xlsx  test_on_win_rar_different_languages.xlsx
